[gd_scene load_steps=4 format=3 uid="uid://bf5b6pr5rr6ut"]

[ext_resource type="Script" uid="uid://5uy0y3ymm7ar" path="res://enter matric screen stuff!/enter_matrix_screen.gd" id="1_qnyiy"]
[ext_resource type="Texture2D" uid="uid://bltd1ca1kfj6b" path="res://enter matric screen stuff!/enter matrix screen w 4 boxes.PNG" id="2_s76la"]
[ext_resource type="FontFile" uid="uid://8ne8d5aawmql" path="res://enter matric screen stuff!/kindergarten.ttf" id="3_s76la"]

[node name="enter matrix screen" type="Node2D"]
script = ExtResource("1_qnyiy")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -25.0
offset_top = -13.0
offset_right = 1175.0
offset_bottom = 662.0
texture = ExtResource("2_s76la")

[node name="input_a" type="LineEdit" parent="."]
offset_left = 663.0
offset_top = 243.0
offset_right = 979.0
offset_bottom = 282.0
theme_override_colors/font_color = Color(0.8352941, 0.6117647, 0.6431373, 1)
theme_override_fonts/font = ExtResource("3_s76la")
theme_override_font_sizes/font_size = 24
flat = true

[node name="input_b" type="LineEdit" parent="."]
offset_left = 662.0
offset_top = 323.0
offset_right = 980.0
offset_bottom = 362.0
theme_override_colors/font_color = Color(0.8352941, 0.6117647, 0.6431373, 1)
theme_override_fonts/font = ExtResource("3_s76la")
theme_override_font_sizes/font_size = 24
flat = true

[node name="input_c" type="LineEdit" parent="."]
offset_left = 662.0
offset_top = 415.0
offset_right = 978.0
offset_bottom = 454.0
theme_override_colors/font_color = Color(0.8352941, 0.6117647, 0.6431373, 1)
theme_override_fonts/font = ExtResource("3_s76la")
theme_override_font_sizes/font_size = 24
flat = true

[node name="input_d" type="LineEdit" parent="."]
offset_left = 664.0
offset_top = 496.0
offset_right = 980.0
offset_bottom = 534.0
theme_override_colors/font_color = Color(0.8352941, 0.6117647, 0.6431373, 1)
theme_override_fonts/font = ExtResource("3_s76la")
theme_override_font_sizes/font_size = 24
flat = true

[connection signal="text_submitted" from="input_a" to="." method="_on_input_a_text_submitted"]
[connection signal="text_submitted" from="input_b" to="." method="_on_input_b_text_submitted"]
[connection signal="text_changed" from="input_c" to="." method="_on_input_c_text_changed"]
[connection signal="text_submitted" from="input_d" to="." method="_on_input_d_text_submitted"]
